manifest/deploy/kustomize/base/device-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-service
  labels:
    app: device-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-service
  template:
    metadata:
      labels:
        app: device-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9803"
        prometheus.io/path: /api.json
    spec:
      containers:
        - name: device-service
          image: go-ai-talk/device-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9803
              name: http
          livenessProbe:
            httpGet:
              path: /api.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api.json
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
