manifest/deploy/kustomize/base/gateway-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-app
  labels:
    app: gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9702"
        prometheus.io/path: /api.json
    spec:
      containers:
        - name: gateway-app
          image: go-ai-talk/gateway-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9702
              name: http
          livenessProbe:
            httpGet:
              path: /api.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api.json
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
