manifest/deploy/kustomize/base/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9701"
        prometheus.io/path: /api.json
    spec:
      containers:
        - name: gateway
          image: go-ai-talk/gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9701
              name: http
          livenessProbe:
            httpGet:
              path: /api.json
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api.json
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
