manifest/deploy/kustomize/base/device-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: device-service
  labels:
    app: device-service
spec:
  type: ClusterIP
  selector:
    app: device-service
  ports:
    - name: http
      port: 9803
      targetPort: http
