manifest/deploy/kustomize/base/gateway-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-app
  labels:
    app: gateway-app
spec:
  selector:
    app: gateway-app
  ports:
    - name: http
      port: 9702
      targetPort: 9702
