manifest/deploy/kustomize/base/history-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-service
  labels:
    app: history-service
spec:
  type: ClusterIP
  selector:
    app: history-service
  ports:
    - name: http
      port: 9801
      targetPort: http
