manifest/deploy/kustomize/base/voice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voice-service
  labels:
    app: voice-service
spec:
  type: ClusterIP
  selector:
    app: voice-service
  ports:
    - name: http
      port: 9802
      targetPort: http
