manifest/deploy/kustomize/base/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker
  labels:
    app: worker
spec:
  type: ClusterIP
  selector:
    app: worker
  ports:
    - name: http
      port: 9901
      targetPort: http
