manifest/deploy/kustomize/base/xiaozhi-mcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xiaozhi-mcp-service
  labels:
    app: xiaozhi-mcp-service
spec:
  type: ClusterIP
  selector:
    app: xiaozhi-mcp-service
  ports:
    - name: internal
      port: 9809
      targetPort: 9809
